--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "@google/genai": "https://esm.sh/@google/genai@^1.40.0",
-    "@xenova/transformers": "https://cdn.jsdelivr.net/npm/@xenova/transformers@2.16.0/dist/transformers.min.js"
+    "@xenova/transformers": "https://cdn.jsdelivr.net/npm/@xenova/transformers@2.16.0/dist/transformers.min.js",
+    "papaparse": "https://esm.sh/papaparse@^5.5.3"
   }
 }
 </script>
